# tavily-fastmcp

./: .env.example  .gitignore  .pdm-python  .readthedocs.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/setup-python-pdm/: action.yml
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml
docs/: requirements.txt
docs/source/: api.md  conf.py  contributing.md  index.md  installation.md  overview.md
docs/source/_static/: custom.css
docs/source/guides/: automation.md  development.md  index.md  publishing.md
docs/source/reference/: configuration.md  index.md  profiles.md  tools.md
docs/source/usage/: claude-code.md  direct-python.md  index.md  langchain.md  mcp-server.md
examples/: 01_in_memory_client.py  02_direct_service.py  03_langchain_agent_via_mcp.py  run_stdio_server.py
src/tavily_fastmcp/: __init__.py  _typing.py  agent.py  client.py  models.py  profiles.py  prompt_loader.py  server.py  service.py  settings.py
src/tavily_fastmcp/prompts/: deep_research.md  extract_and_summarize.md  mcp_usage_guide.md  quick_search.md  router.md  routing_matrix.md  site_crawl.md  site_discovery.md  suite_overview.md  synthesis_policy.md  tool_crawl_master.md  tool_extract_master.md  tool_get_research_master.md  tool_map_master.md  tool_research_master.md  tool_search_master.md
src/tavily_fastmcp/tools/: __init__.py  catalog.py  crawl.py  extract.py  get_research.py  health.py  map.py  research.py  search.py
tests/: __init__.py  conftest.py
tests/e2e/: test_cli_smoke.py
tests/integration/: test_fastmcp_surface.py  test_live_tavily.py  test_server_catalog.py
tests/unit/: test_agent_and_client.py  test_profiles.py  test_prompt_loader.py  test_server_factory.py  test_service_methods.py  test_service_normalization.py  test_settings.py  test_tools_package_structure.py
