[build-system]
requires = ["pdm-backend>=2.4.0"]
build-backend = "pdm.backend"

[project]
name = "tavily-fastmcp"
version = "0.3.0"
description = "Typed FastMCP server, prompts, resources, and profiles for Tavily-powered research workflows."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "William R. Astley" }]
keywords = [
  "mcp",
  "fastmcp",
  "tavily",
  "langchain",
  "research",
  "search",
  "model-context-protocol",
  "prompts",
  "resources",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "fastmcp>=2.13.0",
  "langchain-tavily>=0.2.11",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.6.0",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
langchain = [
  "langchain>=0.3.0",
  "langchain-mcp-adapters>=0.1.0",
  "langchain-openai>=0.3.0",
]
docs = [
  "sphinx>=9.1.0",
  "furo>=2025.12.19",
  "sphinx-autobuild>=2025.8.25",
  "myst-parser>=5.0.0",
  "myst-nb>=1.4.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.7.0",
  "sphinx-togglebutton>=0.4.5",
  "sphinx-inline-tabs>=2025.12.21.14",
  "sphinxcontrib-mermaid>=2.0.1",
  "sphinx-autodoc-typehints>=3.10.2",
  "autodoc-pydantic>=2.2.0",
  "sphinx-autoapi>=3.8.0",
  "sphinxext-opengraph>=0.13.0",
  "sphinx-sitemap>=2.9.0",
  "sphinx-notfound-page>=1.1.0",
  "sphinx-last-updated-by-git>=0.3.8",
  "sphinx-reredirects>=1.1.0",
  "sphinxcontrib-spelling>=8.0.2",
  "doc8>=2.0.0",
]
test = [
  "coverage[toml]>=7.6.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-mcp>=0.1.0",
]
quality = [
  "mypy>=1.13.0",
  "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USER/tavily-fastmcp"
Documentation = "https://tavily-fastmcp.readthedocs.io"
Repository = "https://github.com/YOUR_GITHUB_USER/tavily-fastmcp"
Issues = "https://github.com/YOUR_GITHUB_USER/tavily-fastmcp/issues"
Changelog = "https://github.com/YOUR_GITHUB_USER/tavily-fastmcp/releases"

[project.scripts]
tavily-fastmcp = "tavily_fastmcp.server:main"

[tool.pdm.build]
package-dir = "src"
includes = ["src/tavily_fastmcp"]

[dependency-groups]
langchain = [
  "langchain>=0.3.0",
  "langchain-mcp-adapters>=0.1.0",
  "langchain-openai>=0.3.0",
]
docs = [
  "sphinx>=9.1.0",
  "furo>=2025.12.19",
  "sphinx-autobuild>=2025.8.25",
  "myst-parser>=5.0.0",
  "myst-nb>=1.4.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.7.0",
  "sphinx-togglebutton>=0.4.5",
  "sphinx-inline-tabs>=2025.12.21.14",
  "sphinxcontrib-mermaid>=2.0.1",
  "sphinx-autodoc-typehints>=3.10.2",
  "autodoc-pydantic>=2.2.0",
  "sphinx-autoapi>=3.8.0",
  "sphinxext-opengraph>=0.13.0",
  "sphinx-sitemap>=2.9.0",
  "sphinx-notfound-page>=1.1.0",
  "sphinx-last-updated-by-git>=0.3.8",
  "sphinx-reredirects>=1.1.0",
  "sphinxcontrib-spelling>=8.0.2",
  "doc8>=2.0.0",
]
test = [
  "coverage[toml]>=7.6.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-mcp>=0.1.0",
]
quality = [
  "mypy>=1.13.0",
  "ruff>=0.9.0",
]
dev = [
  { include-group = "langchain" },
  { include-group = "docs" },
  { include-group = "test" },
  { include-group = "quality" },
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=src/tavily_fastmcp --cov-report=term-missing --cov-report=xml --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "e2e: end-to-end tests",
  "live: tests that perform real network calls to Tavily",
]

[tool.coverage.run]
source = ["src/tavily_fastmcp"]
branch = true
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "except ImportError as exc",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "TID", "RUF", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["tavily_fastmcp"]

[tool.doc8]
max-line-length = 120
ignore-path = ["docs/source/_build"]
